# nuspell

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  install.sh
.github/workflows/: cmake.yml
docs/: CMakeLists.txt
res/: acronyms.txt  en_US.dic  test_file.txt  test_status.txt
res/addition/: tier1.filtered.jsonl  tier1.rejected.jsonl  tier1.validated.jsonl  tier2.filtered.jsonl  tier2.rejected.jsonl  tier2.validated.jsonl  tier3.filtered.jsonl  tier3.rejected.jsonl  tier3.validated.jsonl  ug.high_prob.filter.not_exist.good.tier1  ug.high_prob.filter.not_exist.good.tier2  ug.high_prob.filter.not_exist.good.tier3  words_to_add.txt
src/api/: CMakeLists.txt  bundle.cxx  bundle.hxx  classify_missing_words.cxx  compound_corrector.cxx  compound_corrector.hxx  nuspell_corrector.cc  nuspell_corrector.h  pack_resources.cxx  spellcheck_filter.cxx  test_compound.cxx  validate_words.py
src/nuspell/: CMakeLists.txt  aff_data.cxx  aff_data.hxx  checker.cxx  checker.hxx  defines.hxx  dictionary.cxx  dictionary.hxx  filesystem.cxx  filesystem.hxx  finder.cxx  finder.hxx  string_view.hxx  structures.hxx  suggester.cxx  suggester.hxx  unicode.hxx  utils.cxx  utils.hxx
src/tools/: nuspell.cxx
tests/: CMakeLists.txt  api_smoke_test.cxx  verify.cxx
